Fix about bottom spacing

--- a/_sass/about.sass
+++ b/_sass/about.sass
@@ -84,6 +84,7 @@
 
 #about-bottom-block
 	padding-top: 35px
+	padding-bottom : 25px
 
 .bio
 	padding: 15px
